@@ -2,10 +2,10 @@ package com.neol.images.controllers;
 
 import com.neol.images.entity.Image;
 import com.neol.images.services.ImageService;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -18,6 +18,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
+import java.util.List;
 
 @Controller
 public class MainController {
@@ -28,22 +29,28 @@ public class MainController {
 
     @GetMapping("/")
     public String main(Model model){
-        model.addAttribute("images", imageService.getAllImages());
+        List<Image> allImages = imageService.getAllImages();
+        allImages.add(new Image());
+        model.addAttribute("images", allImages);
+
         return "main";
     }
 
     @PostMapping("/upload")
     public String upload(Image image){
         try {
-            if (!Files.exists(Path.of(UPLOADED))){
-                Files.createDirectory(Path.of(UPLOADED));
+            String originalFilename = image.getFile().getOriginalFilename();
+            if (StringUtils.isNotEmpty(originalFilename)){
+                if (!Files.exists(Path.of(UPLOADED))){
+                    Files.createDirectory(Path.of(UPLOADED));
+                }
+                String uploadDir = UPLOADED + "/" + originalFilename;
+                Path uploadPath = Paths.get(uploadDir);
+                try(InputStream inputStream = image.getFile().getInputStream()){
+                    Files.copy(inputStream, uploadPath, StandardCopyOption.REPLACE_EXISTING);
+                }
+                image.setPath("img/" + originalFilename);
             }
-            String uploadDir = UPLOADED + "/" + image.getFile().getOriginalFilename();
-            Path uploadPath = Paths.get(uploadDir);
-            try(InputStream inputStream = image.getFile().getInputStream()){
-                Files.copy(inputStream, uploadPath, StandardCopyOption.REPLACE_EXISTING);
-            }
-            image.setPath("img/" + image.getFile().getOriginalFilename());
             this.imageService.saveImage(image);
         } catch (IOException e) {
             e.printStackTrace();
